# onyx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-EXCEPTIONS.md  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/onyx-core/: Cargo.toml
crates/onyx-core/src/: coalescer.rs  cryptofs.rs  events.rs  fs.rs  graph.rs  history.rs  journal.rs  lib.rs  paths.rs  query.rs  quick.rs  search.rs  vault.rs  watcher.rs
crates/onyx-core/src/index/: mod.rs  store.rs
crates/onyx-core/tests/: index_tests.rs  watcher_integration.rs
crates/onyx-crypto/: Cargo.toml
crates/onyx-crypto/src/: container.rs  enroll.rs  filename.rs  kdf.rs  keys.rs  lib.rs  share.rs
crates/onyx-crypto/tests/: properties.rs
crates/onyx-md/: Cargo.toml
crates/onyx-md/src/: frontmatter.rs  lib.rs  render.rs  scanner.rs
crates/onyx-md/tests/: extract.rs  extract_corpus.rs  properties.rs
crates/onyx-md/tests/corpus/: block-refs.md  callouts.md  code-heavy.md  dataview-ish.md  messy-frontmatter.md  mixed-links.md  nested-embeds.md
crates/onyx-md/tests/snapshots/: extract_corpus__block-refs.md.snap  extract_corpus__callouts.md.snap  extract_corpus__code-heavy.md.snap  extract_corpus__dataview-ish.md.snap  extract_corpus__messy-frontmatter.md.snap  extract_corpus__mixed-links.md.snap  extract_corpus__nested-embeds.md.snap
crates/onyx-proto/: Cargo.toml
crates/onyx-proto/src/: lib.rs
crates/onyx-sync/: Cargo.toml
crates/onyx-sync/src/: doc.rs  lib.rs  store.rs
crates/onyx-sync/tests/: convergence.rs
crates/onyx-testkit/: Cargo.toml
crates/onyx-testkit/src/: lib.rs
crates/tauri-plugin-onyx-secrets/: .gitignore  Cargo.toml  build.rs
crates/tauri-plugin-onyx-secrets/android/: build.gradle.kts  proguard-rules.pro
crates/tauri-plugin-onyx-secrets/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-onyx-secrets/android/src/main/java/: SecretsPlugin.kt
crates/tauri-plugin-onyx-secrets/ios/: Package.swift
crates/tauri-plugin-onyx-secrets/ios/Sources/: SecretsPlugin.swift
crates/tauri-plugin-onyx-secrets/src/: lib.rs
data/: onyx-server.db
docs/: ARCHITECTURE.md  README.md  SECURITY.md  SELF-HOSTING.md
extensions/web-clipper/: README.md  manifest.json  popup.html  popup.js
extensions/web-clipper/lib/: README.md
onyx-desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
onyx-desktop/src/: App.tsx  CaptureApp.tsx  api.ts  i18n.test.ts  i18n.ts  main.tsx  styles.css  workspace.test.ts  workspace.ts
onyx-desktop/src-tauri/: Cargo.toml  tauri.conf.json
onyx-desktop/src-tauri/capabilities/: default.json  desktop.json  mobile.json
onyx-desktop/src-tauri/src/: agent.rs  ai.rs  backup.rs  capture.rs  clipper.rs  commands.rs  engine.rs  lib.rs  main.rs  protocol.rs  publish.rs  rag.rs  secrets.rs  settings.rs  state.rs  sync.rs
onyx-desktop/src-tauri/tests/: backup_e2e.rs  flaky_net_e2e.rs  sync_e2e.rs
onyx-desktop/src/components/: AgentPanel.tsx  Backlinks.tsx  ChatPanel.tsx  CommandPalette.tsx  Editor.tsx  GraphView.tsx  HistoryPanel.tsx  Insights.tsx  Pane.tsx  QrCode.tsx  QuickSwitcher.tsx  ReadingView.tsx  RightPanel.tsx  SettingsModal.tsx  TabBar.tsx
onyx-desktop/src/editor/: embed-widget.ts  enhance.ts  inline-scan.test.ts  inline-scan.ts  live-preview.ts  wikilink-complete.ts
onyx-desktop/src/locales/: en.json  es.json
onyx-desktop/src/mobile/: MobileApp.tsx  MobileToolbar.tsx
onyx-desktop/src/plugins/: host.test.ts  host.ts
onyx-desktop/src/types/: katex-auto-render.d.ts
onyx-server/: Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
onyx-server/src/: auth.rs  db.rs  lib.rs  main.rs  routes.rs  ws.rs
onyx-server/tests/: e2e_sync.rs
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/homebrew/: onyx.rb
packaging/stores/: README.md
packaging/winget/: Onyx.yaml
plugins/: registry.json
xtask/: Cargo.toml
xtask/src/: main.rs
