[package]
name = "onyx-server"
description = "Onyx self-hosted sync server: zero-knowledge encrypted oplog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Zero-knowledge discipline is enforced by the dependency graph: this crate
# must NEVER depend on onyx-core or onyx-md — the server cannot parse what
# it cannot link.
[dependencies]
axum = { workspace = true }
blake3 = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
onyx-proto = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
onyx-crypto = { workspace = true }
onyx-sync = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
