[package]
name = "xtask"
description = "Onyx build/bench tasks: corpus generation, perf measurements"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
onyx-core = { workspace = true }
onyx-testkit = { workspace = true }
