[package]
name = "onyx-core"
description = "Onyx vault engine: file watching, atomic writes, indexing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
notify = { workspace = true }
nucleo-matcher = { workspace = true }
tantivy = { workspace = true }
onyx-md = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
onyx-testkit = { workspace = true }
proptest = { workspace = true }
