[package]
publish = false
name = "onyx-md"
description = "Markdown extraction for Onyx: wikilinks, tags, frontmatter, headings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
