[package]
name = "onyx-proto"
description = "Onyx wire protocol: versioned message types shared by clients and server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
