[package]
name = "onyx-desktop"
description = "Onyx desktop app (Tauri v2 shell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "onyx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
onyx-core = { workspace = true }
onyx-crypto = { workspace = true }
onyx-proto = { workspace = true }
onyx-sync = { workspace = true }
reqwest = { workspace = true }
tungstenite = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
onyx-md = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
onyx-server = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
