[package]
publish = false
name = "onyx-desktop"
description = "Onyx desktop app (Tauri v2 shell)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "onyx_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Desktop-only capabilities: global shortcuts have no mobile equivalent,
# and keyring's backends are desktop OSes (mobile uses the onyx-secrets
# plugin — mobile milestone M4).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }

# Mobile-only plugins: hardware keystore secrets, QR enrollment scanning,
# onyx:// deep links (capture + share target), touch haptics.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-onyx-secrets = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-barcode-scanner = { workspace = true }
tauri-plugin-haptics = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
blake3 = { workspace = true }
crossbeam-channel = { workspace = true }
onyx-core = { workspace = true }
onyx-crypto = { workspace = true }
onyx-proto = { workspace = true }
postcard = { workspace = true }
opendal = { workspace = true }
tokio = { workspace = true }
onyx-sync = { workspace = true }
reqwest = { workspace = true }
tungstenite = { workspace = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
onyx-md = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
data-encoding = { workspace = true }
onyx-server = { workspace = true }
tempfile = { workspace = true }
